--- a/MeteoStyle/AppShell.xaml
+++ b/MeteoStyle/AppShell.xaml
@@ -8,8 +8,8 @@
     Title="MeteoStyle">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    Title="WelcomePage"
+    ContentTemplate="{DataTemplate local:WelcomePage}"
+    Route="WelcomePage" />
 
 </Shell>
