--- a/MeteoStyle/Pages/WelcomePage.xaml
+++ b/MeteoStyle/Pages/WelcomePage.xaml
@@ -1,23 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MeteoStyle.WelcomePage"
-             Background="LightYellow"
-             >
+             x:Class="MeteoStyle.WelcomePage">
 
     <ScrollView>
         <VerticalStackLayout HorizontalOptions="Center">
-            <Label Text="Привет!" FontSize="50" TextColor="Black" HorizontalOptions="Center"/>
-            <Label Text="Для продолжения введите данные." FontSize="30" TextColor="Black"/>
+            <Label Text="Привет!" FontSize="50" HorizontalOptions="Center"/>
+            <Label Text="Для продолжения введите данные." FontSize="30"/>
             <VerticalStackLayout>
-                <Label Text="Укажите местоположение:" FontSize="30" TextColor="Black"/>
-                <Entry x:Name="EntryCity" Placeholder="Москва" FontSize="30" TextColor="Black" Background="White"/>
+                <Label Text="Укажите местоположение:" FontSize="30"/>
+                <Entry x:Name="EntryCity" Placeholder="Москва" FontSize="30"/>
             </VerticalStackLayout>
-            <Label Text="Выберите предпочтения:" FontSize="30" TextColor="Black"/>
-            <RadioButton x:Name="RBCold" GroupName="Feelings" Content="Не переношу, когда открывают форточки в автобусе!" TextColor="Black"/>
-            <RadioButton x:Name="RBWarm" GroupName="Feelings" Content="Надоели бабки, которые постоянно мерзнут!" TextColor="Black"/>
-            <RadioButton GroupName="Feelings" Content="Я НОрм@лЬНЫй!" TextColor="Black" IsChecked="True"/>
-            <Button Text="Начать" Clicked="GoToHomePage" Background="Orange"/>
+            <Label Text="Выберите предпочтения:" FontSize="30"/>
+            <RadioButton x:Name="RBCold" GroupName="Feelings" Content="Не переношу, когда открывают форточки в автобусе!"/>
+            <RadioButton x:Name="RBWarm" GroupName="Feelings" Content="Надоели бабки, которые постоянно мерзнут!"/>
+            <RadioButton GroupName="Feelings" Content="Я НОрм@лЬНЫй!" IsChecked="True"/>
+            <Button Text="Начать" Clicked="GoToHomePage"/>
         </VerticalStackLayout>
     </ScrollView>
 
