--- a/MeteoStyle/Resources/Styles/Colors.xaml
+++ b/MeteoStyle/Resources/Styles/Colors.xaml
@@ -4,19 +4,24 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
+    <!-- Для светлой темы -->
 
-    <Color x:Key="Primary">#512BD4</Color>
-    <Color x:Key="PrimaryDark">#ac99ea</Color>
+    <Color x:Key="DarkYellowBackground">#FFECBA</Color>
+    <Color x:Key="LightYellowBackground">#FFFDED</Color>
+    <Color x:Key="BrightYellowBackground">#F69E00</Color>
+    <Color x:Key="DarkYellowText">#490100</Color>
+
+    <Color x:Key="Primary">#F69E00</Color>
+    <Color x:Key="PrimaryDark">#F69E00</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
-    <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="SecondaryDarkText">#9880e5</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
+    <Color x:Key="Secondary">#FFFDED</Color>
+    <Color x:Key="SecondaryDarkText">#FFECBA</Color>
+    <Color x:Key="Tertiary">#490100</Color>
 
-    <Color x:Key="White">White</Color>
-    <Color x:Key="Black">Black</Color>
+    <Color x:Key="White">#FFFDED</Color>
+    <Color x:Key="Black">#490100</Color>
     <Color x:Key="Magenta">#D600AA</Color>
-    <Color x:Key="MidnightBlue">#190649</Color>
+    <Color x:Key="MidnightBlue">#F69E00</Color>
     <Color x:Key="OffBlack">#1f1f1f</Color>
 
     <Color x:Key="Gray100">#E1E1E1</Color>
