--- a/MeteoStyle/Pages/WelcomePage.xaml
+++ b/MeteoStyle/Pages/WelcomePage.xaml
@@ -4,17 +4,19 @@
              x:Class="MeteoStyle.WelcomePage">
 
     <ScrollView>
-        <VerticalStackLayout HorizontalOptions="Center">
-            <Label Text="Привет!" FontSize="50" HorizontalOptions="Center"/>
-            <Label Text="Для продолжения введите данные." FontSize="30"/>
-            <VerticalStackLayout>
-                <Label Text="Укажите местоположение:" FontSize="30"/>
-                <Entry x:Name="EntryCity" Placeholder="Москва" FontSize="30"/>
+        <VerticalStackLayout HorizontalOptions="Center" Margin="25">
+            <Label Text="Привет!" FontSize="20" HorizontalOptions="Center"/>
+            <Label Text="Для продолжения введите данные." FontSize="18" HorizontalOptions="Center"/>
+            <VerticalStackLayout Margin="0,10,0,10">
+                <Label Text="Укажите местоположение:" Margin="0,0,0,5"/>
+                <Entry x:Name="EntryCity" Placeholder="Москва"/>
             </VerticalStackLayout>
-            <Label Text="Выберите предпочтения:" FontSize="30"/>
-            <RadioButton x:Name="RBCold" GroupName="Feelings" Content="Не переношу, когда открывают форточки в автобусе!"/>
-            <RadioButton x:Name="RBWarm" GroupName="Feelings" Content="Надоели бабки, которые постоянно мерзнут!"/>
-            <RadioButton GroupName="Feelings" Content="Я НОрм@лЬНЫй!" IsChecked="True"/>
+            <VerticalStackLayout Margin="0,0,0,10">
+                <Label Text="Выберите предпочтения:"/>
+                <RadioButton x:Name="RBCold" GroupName="Feelings" Content="Не переношу, когда открывают форточки в автобусе!"/>
+                <RadioButton x:Name="RBWarm" GroupName="Feelings" Content="Надоели бабки, которые постоянно мерзнут!" Margin="0,-5,0,0"/>
+                <RadioButton GroupName="Feelings" Content="Я НОрм@лЬНЫй!" IsChecked="True" Margin="0,-5,0,0"/>
+            </VerticalStackLayout>
             <Button Text="Начать" Clicked="GoToHomePage"/>
         </VerticalStackLayout>
     </ScrollView>
