--- a/MeteoStyle/Pages/MainPage.xaml
+++ b/MeteoStyle/Pages/MainPage.xaml
@@ -3,17 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MeteoStyle.Pages.MainPage"
              Title="MainPage">
-    <VerticalStackLayout>
+    <VerticalStackLayout HorizontalOptions="Center">
         <VerticalStackLayout>
             <Image Source="dotnet_bot.png" WidthRequest="200"/>
-            <Label Text="31 C" HorizontalOptions="Center"/>
-            <Label Text="Ветренно" HorizontalOptions="Center"/>
+            <Label x:Name="LabelTemperature" Text="31 C" HorizontalOptions="Center" Margin="0,10,0,0"/>
+            <Label x:Name="LabelDescription" Text="Ветренно" HorizontalOptions="Center" Margin="0,0,0,10"/>
         </VerticalStackLayout>
-        <Label x:Name="LabelClother" Text="Рекомендации" HeightRequest="100"/>
-        <HorizontalStackLayout>
-            <Label Text="1"/>
-            <Label Text="1"/>
-            <Label Text="1"/>
-        </HorizontalStackLayout>
+        <VerticalStackLayout x:Name="LayoutResults">
+            <Border StrokeThickness="1">
+            <Label x:Name="LabelClother" Text="Рекомендации" WidthRequest="300" Margin="10"/>
+            </Border>
+            <HorizontalStackLayout HorizontalOptions="Center" Margin="0,10,0,0" HeightRequest="70">
+                <Button x:Name="ButtonCold" Clicked="ChoiceFeelings" Text="🥶" IsEnabled="{Binding CanChoice}" FontSize="25" Background="Transparent" Margin="5"/>
+                <Button x:Name="ButtonNormal" Clicked="ChoiceFeelings" Text="🙂" IsEnabled="{Binding CanChoice}" FontSize="25" Background="Transparent" Margin="5"/>
+                <Button x:Name="ButtonWarm" Clicked="ChoiceFeelings" Text="🥵" IsEnabled="{Binding CanChoice}" FontSize="25" Background="Transparent" Margin="5"/>
+                </HorizontalStackLayout>
+            <Label x:Name="LabelMessage" Text="Пожалуйста, оцените результат" HorizontalOptions="Center" Margin="10"/>
+            </VerticalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
