--- a/MeteoStyle/Pages/MainPage.xaml
+++ b/MeteoStyle/Pages/MainPage.xaml
@@ -14,9 +14,9 @@
             <Label x:Name="LabelClother" Text="Рекомендации" WidthRequest="300" Margin="10"/>
             </Border>
             <HorizontalStackLayout HorizontalOptions="Center" Margin="0,10,0,0" HeightRequest="70">
-                <Button x:Name="ButtonCold" Clicked="ChoiceFeelings" Text="🥶" IsEnabled="{Binding CanChoice}" FontSize="25" Background="Transparent" Margin="5"/>
-                <Button x:Name="ButtonNormal" Clicked="ChoiceFeelings" Text="🙂" IsEnabled="{Binding CanChoice}" FontSize="25" Background="Transparent" Margin="5"/>
-                <Button x:Name="ButtonWarm" Clicked="ChoiceFeelings" Text="🥵" IsEnabled="{Binding CanChoice}" FontSize="25" Background="Transparent" Margin="5"/>
+                <Button x:Name="ButtonCold" Clicked="ChoiceFeelings" Text="🥶" FontSize="25" Background="Transparent" Margin="5"/>
+                <Button x:Name="ButtonNormal" Clicked="ChoiceFeelings" Text="🙂" FontSize="25" Background="Transparent" Margin="5"/>
+                <Button x:Name="ButtonWarm" Clicked="ChoiceFeelings" Text="🥵" FontSize="25" Background="Transparent" Margin="5"/>
                 </HorizontalStackLayout>
             <Label x:Name="LabelMessage" Text="Пожалуйста, оцените результат" HorizontalOptions="Center" Margin="10"/>
             </VerticalStackLayout>
