--- a/MeteoStyle/Views/MainPage.xaml
+++ b/MeteoStyle/Views/MainPage.xaml
@@ -5,9 +5,9 @@
              Title="MainPage">
     <VerticalStackLayout HorizontalOptions="Center">
         <VerticalStackLayout>
-            <Image Source="dotnet_bot.png" WidthRequest="200"/>
-            <Label Text="31 C" HorizontalOptions="Center" Margin="0,10,0,0"/>
-            <Label Text="Ветренно" HorizontalOptions="Center" Margin="0,0,0,10"/>
+            <Image Source="{Binding ImageUrl}" WidthRequest="100" HorizontalOptions="Center"/>
+            <Label Text="{Binding TemperatureText}" HorizontalOptions="Center" Margin="0,-20,0,0"/>
+            <Label Text="{Binding WeatherText}" HorizontalOptions="Center" Margin="0,0,0,10"/>
         </VerticalStackLayout>
         <VerticalStackLayout>
             <Border StrokeThickness="1">
@@ -17,8 +17,8 @@
                 <Button Command ="{Binding ChoiceFeelingsClick}" CommandParameter="cold" IsEnabled="{Binding CanChoice}" FontSize="{Binding ColdEmojiSize}" Text="🥶" Background="Transparent" Margin="5"/>
                 <Button Command ="{Binding ChoiceFeelingsClick}" CommandParameter="comfort" IsEnabled="{Binding CanChoice}" FontSize="{Binding ComfortEmojiSize}" Text="🙂" Background="Transparent" Margin="5"/>
                 <Button Command ="{Binding ChoiceFeelingsClick}" CommandParameter="warm" IsEnabled="{Binding CanChoice}" FontSize="{Binding WarmEmojiSize}" Text="🥵" Background="Transparent" Margin="5"/>
-                </HorizontalStackLayout>
-            <Label Text="{Binding MessageText}" WidthRequest="350" HorizontalOptions="Center" Margin="10"/>
+            </HorizontalStackLayout>
+            <Label Text="{Binding MessageText}" WidthRequest="350" HorizontalOptions="Center" HorizontalTextAlignment="Center" Margin="10"/>
             </VerticalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
